fixed body background color overlapping video and making it look like it wasn't appearing

--- a/themes/Pretty Creative/last-style.css
+++ b/themes/Pretty Creative/last-style.css
@@ -7,7 +7,7 @@ html {
 
 body
 {
-	background: #000;
+	/*background: #000;*/
 	-webkit-animation: fadein 2s;
 /* Safari, Chrome and Opera > 12.1 */
 	-moz-animation: fadein 2s;
